--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,9 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
 
+    <script src="//use.typekit.net/yrt0yrw.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
+    
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 </head>
