--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,21 +2,25 @@
 layout: default
 ---
 <div class="then">
-  <header class="post-header">
-    <h2>On {{ page.date | date: '%B %d, %Y' }}, I claimed…</h2>
-  </header>
+  <div class="wrapper">
+    <header class="post-header">
+      <h2>On {{ page.date | date: '%B %d, %Y' }}, I claimed…</h2>
+    </header>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+    <article class="post-content">
+      {{ content }}
+    </article>
+  </div>
 </div>
 
 <div class="now">
-  <header class="post-header">
-    <h2>But since {{ site.posts.first.date | date: '%B %d, %Y' }}…</h2>
-  </header>
+  <div class="wrapper">
+    <header class="post-header">
+      <h2>But since {{ site.posts.first.date | date: '%B %d, %Y' }}…</h2>
+    </header>
 
-  <article class="post-content">
-    {{ site.posts.first.content | markdownify }}
-  </article>
+    <article class="post-content">
+      {{ site.posts.first.content | markdownify }}
+    </article>
+  </div>
 </div>
