--- a/css/main.scss
+++ b/css/main.scss
@@ -6,17 +6,19 @@
 
 
 // Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
+$base-font-family: "freight-micro-pro", serif;
 $base-font-size:   16px;
+$large-font-size: $base-font-size * 1.75;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: #fdfdfd;
+$background-color: #fff;
 $brand-color:      #2a7ae2;
 
+$background-grey:  #f9f9f9;
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
