--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -53,6 +53,34 @@ article {
   }
 }
 
+ul.old-bios {
+  margin-left: 0;
+  padding-left: 0;
+
+  li {
+    list-style-type: none;
+  }
+}
+
+ul.adjacent-posts {
+  margin-top: $spacing-unit * 2;
+  margin-left: 0;
+
+  li {
+    display: inline-block;
+    list-style-type: none;
+
+    &.prev {
+      float: left;
+    }
+
+    &.next {
+      float: right;
+      text-align: right;
+    }
+  }
+}
+
 
 /**
  * Site footer
