--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #fff;
-$brand-color:      #2a7ae2;
+$brand-color:      #ff5a15;
 
 $background-grey:  #f9f9f9;
 $grey-color:       #828282;
