Added Projects and About pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,9 @@
 <footer class="site-footer">
-
-
+  <div class="wrapper">
+    <ul class="pages">
+      <li><a href="/projects.html">Projects</a></li>
+      <li><a href="/about.html">About</a></li>
+    </ul>
+    {% include social-media-list.html %}
+  </div>
 </footer>
