--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,8 @@
 
   <div class="wrapper">
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+
+    {% include social-media-list.html %}
   </div>
 
 </header>
