--- a/css/main.scss
+++ b/css/main.scss
@@ -9,6 +9,7 @@
 $base-font-family: "freight-micro-pro", serif;
 $base-font-size:   16px;
 $large-font-size: $base-font-size * 1.75;
+$medium-font-size: $base-font-size * 1.3125;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
