Add Micro.blog verification

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,9 @@
 
     <script src="//use.typekit.net/yrt0yrw.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
-    
+
+    <link href="https://micro.blog/jonesbp" rel="me" />
+
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 </head>
