--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,8 @@
 
     {% include footer.html %}
 
+    <script async src="https://cdn.simpleanalytics.io/hello.js"></script>
+    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
   </body>
 
 </html>
