--- a/_includes/social-media-list.html
+++ b/_includes/social-media-list.html
@@ -1,6 +1,6 @@
     <ul class="social-media-list">
       <li>
-        <a href="https://social.coop/@jonesbp">Mastodon</a>
+        <a href="https://masto.brianjon.es/@brian">Mastodon</a>
       </li>
       <li>
         <a href="https://twitter.com/jonesbp">Twitter</a>
