Update social media list

--- a/_includes/social-media-list.html
+++ b/_includes/social-media-list.html
@@ -1,11 +1,11 @@
-    <ul class="social-media-list">
-      <li>
-        <a href="https://twitter.com/jonesbp">Twitter</a>
-      </li>
-      <li>
+<ul class="social-media-list">
+    <li>
+        <a href="https://sunbeam.city/@jonesbp">Mastodon</a>
+    </li>
+    <li>
         <a href="https://github.com/jonesbp">Github</a>
-      </li>
-      <li>
+    </li>
+    <li>
         <a href="http://micro.brianjon.es">Microblog</a>
-      </li>
-    </ul>
+    </li>
+</ul>
