--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,7 @@
 
     {% include footer.html %}
 
-    <script async src="https://cdn.simpleanalytics.io/hello.js"></script>
-    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
+    <script src="https://tinylytics.app/embed/fF5zRHueuJ4FCxKmakia.js" defer></script>
   </body>
 
 </html>
